Added projects to #portfolio

--- a/index.html
+++ b/index.html
@@ -659,17 +659,16 @@
           </div>
         </div>
 
-        <!-- CodeX -->
+        <!-- VS Coder -->
         <div class="col-4">
           <div class="effect">
-            <a href="https://wcrozier12.github.io/CODEx/" target="_blank">
+            <a href="https://itsokayitsofficial.github.io/ioio_coder/" target="_blank">
               <br>
-              <img class="img-responsive" width="200px" src="https://raw.githubusercontent.com/Team-Fire-Codex/Codex/master/images/text_logo_1.png"
-                alt="">
+              <img class="img-responsive" width="150px" src="https://ih0.redbubble.net/image.269447667.3367/flat,800x800,075,f.jpg" alt="">
             </a>
             <figcaption>
               <div>
-                <p>Learning Resource (REST API)</p>
+                <p>VS Code editor (CSS/JS)</p>
               </div>
             </figcaption>
           </div>
@@ -705,7 +704,23 @@
             </a>
             <figcaption>
               <div>
-                <p>ReactApp Mockup (Bootstrap 4)</p>
+                <p>ReactApp Mockup (Bootstrap4)</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
+
+        <!-- CodeX -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="https://wcrozier12.github.io/CODEx/" target="_blank">
+              <br>
+              <img class="img-responsive" width="200px" src="https://raw.githubusercontent.com/Team-Fire-Codex/Codex/master/images/text_logo_1.png"
+                alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>Learning Resource (REST API)</p>
               </div>
             </figcaption>
           </div>
