Corrected #contact alignment

--- a/index.html
+++ b/index.html
@@ -739,9 +739,9 @@
     <div class="container">
       <div class="row">
         <div id="contact">
-          <h1 style="text-align: center; margin-left: -100px;">Contact</h1>
+          <h1 style="margin-left: -100px;">Contact</h1>
 
-          <div class="col-12">
+          <div class="col-10" style="margin-left: -175px;">
             <ul class="social">
               <!-- github -->
               <li>
