Added CSS Code editor to #portfolio

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
         <!-- VS Coder -->
         <div class="col-4">
           <div class="effect">
-            <a href="https://itsokayitsofficial.github.io/ioio_coder/" target="_blank">
+            <a href="http://itsokayitsofficial.io/port/code/code.html" target="_blank">
               <br>
               <img class="img-responsive" width="150px" src="https://ih0.redbubble.net/image.269447667.3367/flat,800x800,075,f.jpg" alt="">
             </a>
