--- a/port/angularjs_stopwatch/index.html
+++ b/port/angularjs_stopwatch/index.html
@@ -61,7 +61,7 @@
 
     </div>
   </section>
-  <!-- /#stopwatch
+  <!-- /#stopwatch -->
 
   <!-- Custom Js -->
   <script src="../../assets/js/custom.js"></script>
