--- a/port/code/coder.html
+++ b/port/code/coder.html
@@ -308,16 +308,16 @@
     <code>
   // Twitter API keys
   var twitterKeys = {
-    consumer_key: 'LRtKWnfkEYctrT5udepDGADyM',
-    consumer_secret: 'gv1RiB4eXd4mftJJKYnAS7BC7SrI0d7IjY9nQn8MRwRC9Q7F7G',
-    access_token_key: '2823395241-uYjfYfpdBkneGSuUD0G5xBmWrXDZKsVrFPrhGhT',
-    access_token_secret: 'RTe0Oh7TY4qMyCWocFUA5OktmbiInnE1kwwiv6OAzCYBb'
+    consumer_key: 'your.key',
+    consumer_secret: 'your.key',
+    access_token_key: 'your.token',
+    access_token_secret: 'your.token'
   };
 
   // Spotify API keys
   var spotifyKeys = {
-    client_id: '21ff2fb0d1594b44b2759fdcdd60b77d',
-    client_secret: '4a8f6c3b93ea44b7a465ad51f2128704'
+    client_id: 'your.id',
+    client_secret: 'your.id'
   };
 
   // Exports
