--- a/index.html
+++ b/index.html
@@ -59,20 +59,20 @@
         </div>
         <!-- /.col-4 -->
         <div class="col-8">
-          <h1>Developer & Student</h1>
+          <h1>Certified Full-Stack Developer</h1>
           <div class="col-6">
             <p>Between growing up in Germany to hanging out in Montreal, studying in Kansas - then Beirut-, advocacy and designing
               in D.C. & now finally banking and finance in AZ I've tried my hand at a little bit of everything. I've managed
               to take part in the variety of human experiences & want to put that to work for you.</p>
             <p>I taught myself programming playing around with internet based virtual worlds and picked up markup by taking
-              apart websites to see how they work. I haven't stopped learning since and am currently enrolled in the University
+              apart websites to see how they work. I haven't stopped learning since and just completed the University
               of Arizona's Full-stack Developer program.</p>
           </div>
           <!-- /.col-6 -->
           <div class="col-6">
-            <p>From Javascript to to Ruby, designing and building for the web has become an all consuming passion. I'm particularly
-              good at building web presence through front-end design, connecting workflows with Node, Angular, & React, and
-              manipulating RESTful API.</p>
+            <p>From HTML to JavaScript to MongoDB, designing and building for the web has become an all consuming passion. I'm particularly
+              good at building on the front with HTML, CSS, and React, connecting with Node, and
+              manipulating RESTful API with MongoDB.</p>
             <p>Need a web presence? I got you covered. Need solid back-to-front management and flow? I'm on it! </p>
             <br>
             <hr>
