Added to #Portfolio

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
               in D.C. & now finally banking and finance in AZ I've tried my hand at a little bit of everything. I've managed
               to take part in the variety of human experiences & want to put that to work for you.</p>
             <p>I taught myself programming playing around with internet based virtual worlds and picked up markup by taking
-              apart websites to see how they work. I haven't stopped learning since and just completed the University
-              of Arizona's Full-stack Developer program.</p>
+              apart websites to see how they work. I haven't stopped learning since and just completed the University of
+              Arizona's Full-stack Developer program.</p>
           </div>
           <!-- /.col-6 -->
           <div class="col-6">
-            <p>From HTML to JavaScript to MongoDB, designing and building for the web has become an all consuming passion. I'm particularly
-              good at building on the front with HTML, CSS, and React, connecting with Node, and
-              manipulating RESTful API with MongoDB.</p>
+            <p>From HTML to JavaScript to MongoDB, designing and building for the web has become an all consuming passion. I'm
+              particularly good at building on the front with HTML, CSS, and React, connecting with Node, and manipulating
+              RESTful API with MongoDB.</p>
             <p>Need a web presence? I got you covered. Need solid back-to-front management and flow? I'm on it! </p>
             <br>
             <hr>
@@ -697,14 +697,14 @@
         <!-- PortHub -->
         <div class="col-4">
           <div class="effect">
-            <a href="https://itsokayitsofficial.github.io/project3_mockup" target="_blank">
+            <a href="https://realporthub.herokuapp.com/" target="_blank">
               <br>
               <img class="img-responsive" width="200px" src="https://camo.githubusercontent.com/8f12aa75a329d4b8df4ded8a752981f73573f2a7/68747470733a2f2f63646e2e7261776769742e636f6d2f4974734f6b61794974734f6666696369616c2f70726f6a656374332f6465762f6173736574732f696d616765732f706f72746875622d6c6f676f2e7376673f73616e6974697a653d74727565"
                 alt="">
             </a>
             <figcaption>
               <div>
-                <p>ReactApp Mockup (Bootstrap4)</p>
+                <p>Portfolio/Resume App (React)</p>
               </div>
             </figcaption>
           </div>
@@ -728,6 +728,58 @@
 
       </div>
       <!-- /.row -->
+
+      <div class="row half">
+        <!-- PortHub Moble -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="https://expo.io/@itsokayitsofficial/porthub-app" target="_blank">
+              <br>
+              <img class="img-responsive" width="200px" src="https://cdn.rawgit.com/ItsOkayItsOfficial/project3/native_app/assets/images/porthub_icon.png"
+                alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>PortHub Mobile (React Native)</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
+
+        <!-- Expo Snacks -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="https://snack.expo.io/@itsokayitsofficial" target="_blank">
+              <br>
+              <img class="img-responsive" width="200px" src="https://d1wp6m56sqw74a.cloudfront.net/~assets/eac9cc0fbd5a7deb0bd90a2b2a787a1f"
+                alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>Expo Snacks (React Native)</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
+
+        <!-- IOIO -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="https://github.com/ItsOkayItsOfficial/itsokayitsofficial.io" target="_blank">
+              <br>
+              <img class="img-responsive" width="200px" src="./assets/img/logo_simple.svg" alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>This Site! (HTML/CSS/JS)</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
+
+      </div>
+      <!-- /.row -->
+
     </div>
     <!-- /.container -->
   </section>
