Styled icons in #Portfolio

--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
           <div class="effect">
             <a href="https://expo.io/@itsokayitsofficial/porthub-app" target="_blank">
               <br>
-              <img class="img-responsive" width="200px" src="https://cdn.rawgit.com/ItsOkayItsOfficial/project3/native_app/assets/images/porthub_icon.png"
+              <img class="img-responsive" src="https://cdn.rawgit.com/ItsOkayItsOfficial/project3/native_app/assets/images/porthub_icon.png"
                 alt="">
             </a>
             <figcaption>
@@ -751,7 +751,7 @@
           <div class="effect">
             <a href="https://snack.expo.io/@itsokayitsofficial" target="_blank">
               <br>
-              <img class="img-responsive" width="200px" src="https://d1wp6m56sqw74a.cloudfront.net/~assets/eac9cc0fbd5a7deb0bd90a2b2a787a1f"
+              <img class="img-responsive" src="https://d1wp6m56sqw74a.cloudfront.net/~assets/eac9cc0fbd5a7deb0bd90a2b2a787a1f"
                 alt="">
             </a>
             <figcaption>
@@ -767,7 +767,7 @@
           <div class="effect">
             <a href="https://github.com/ItsOkayItsOfficial/itsokayitsofficial.io" target="_blank">
               <br>
-              <img class="img-responsive" width="200px" src="./assets/img/logo_simple.svg" alt="">
+              <img class="img-responsive" src="./assets/img/logo_simple.svg" alt="">
             </a>
             <figcaption>
               <div>
