Media queried into mobile friendly

--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
         <div class="col-4">
           <div class="effect">
             <a href="https://peaceful-garden-23465.herokuapp.com/" target="_blank">
-              <img class="img-responsive" width="200px" src="https://raw.githubusercontent.com/ItsOkayItsOfficial/Project2/develop/public/images/logo.png"
+              <img class="img-responsive" src="https://raw.githubusercontent.com/ItsOkayItsOfficial/Project2/develop/public/images/logo.png"
                 alt="">
             </a>
             <figcaption>
@@ -663,7 +663,7 @@
           <div class="effect">
             <a href="http://itsokayitsofficial.io/port/code/coder.html" target="_blank">
               <br>
-              <img class="img-responsive" width="150px" src="https://ih0.redbubble.net/image.269447667.3367/flat,800x800,075,f.jpg" alt="">
+              <img class="img-responsive" src="https://ih0.redbubble.net/image.269447667.3367/flat,800x800,075,f.jpg" alt="">
             </a>
             <figcaption>
               <div>
@@ -698,7 +698,7 @@
           <div class="effect">
             <a href="https://realporthub.herokuapp.com/" target="_blank">
               <br>
-              <img class="img-responsive" width="200px" src="https://camo.githubusercontent.com/8f12aa75a329d4b8df4ded8a752981f73573f2a7/68747470733a2f2f63646e2e7261776769742e636f6d2f4974734f6b61794974734f6666696369616c2f70726f6a656374332f6465762f6173736574732f696d616765732f706f72746875622d6c6f676f2e7376673f73616e6974697a653d74727565"
+              <img class="img-responsive" src="https://camo.githubusercontent.com/8f12aa75a329d4b8df4ded8a752981f73573f2a7/68747470733a2f2f63646e2e7261776769742e636f6d2f4974734f6b61794974734f6666696369616c2f70726f6a656374332f6465762f6173736574732f696d616765732f706f72746875622d6c6f676f2e7376673f73616e6974697a653d74727565"
                 alt="">
             </a>
             <figcaption>
@@ -714,7 +714,7 @@
           <div class="effect">
             <a href="https://wcrozier12.github.io/CODEx/" target="_blank">
               <br>
-              <img class="img-responsive" width="200px" src="https://raw.githubusercontent.com/Team-Fire-Codex/Codex/master/images/text_logo_1.png"
+              <img class="img-responsive" src="https://raw.githubusercontent.com/Team-Fire-Codex/Codex/master/images/text_logo_1.png"
                 alt="">
             </a>
             <figcaption>
@@ -748,7 +748,7 @@
         <!-- Expo Snacks -->
         <div class="col-4">
           <div class="effect">
-            <a href="https://snack.expo.io/@itsokayitsofficial" target="_blank">
+            <a href="https://expo.io/snacks/@itsokayitsofficial" target="_blank">
               <br>
               <img class="img-responsive" src="https://d1wp6m56sqw74a.cloudfront.net/~assets/eac9cc0fbd5a7deb0bd90a2b2a787a1f"
                 alt="">
@@ -790,9 +790,9 @@
     <div class="container">
       <div class="row">
         <div id="contact">
-          <h1 style="margin-left: -100px;">Contact</h1>
+          <h1>Contact</h1>
 
-          <div class="col-10" style="margin-left: -175px;">
+          <div class="col-10">
             <ul class="social">
               <!-- github -->
               <li>
