--- a/index.html
+++ b/index.html
@@ -712,9 +712,9 @@
         <!-- CodeX -->
         <div class="col-4">
           <div class="effect">
-            <a href="https://wcrozier12.github.io/CODEx/" target="_blank">
+            <a href="https://team-fire-codex.github.io/CODEx/" target="_blank">
               <br>
-              <img class="img-responsive" src="https://raw.githubusercontent.com/Team-Fire-Codex/Codex/master/images/text_logo_1.png"
+              <img class="img-responsive" src="https://raw.githubusercontent.com/Team-Fire-Codex/CODEx/master/assets/img/name_logo_1.png"
                 alt="">
             </a>
             <figcaption>
