Updated url for Whiteboard in #Portfolio

--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
         <!-- Whiteboard -->
         <div class="col-4">
           <div class="effect">
-            <a href="https://peaceful-garden-23465.herokuapp.com/" target="_blank">
+            <a href="https://realwhiteboard.herokuapp.com/" target="_blank">
               <img class="img-responsive" src="https://raw.githubusercontent.com/ItsOkayItsOfficial/Project2/develop/public/images/logo.png"
                 alt="">
             </a>
