Updated dependencies/scripts to preload

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <title>Alex P | Web Developer</title>
 
   <!-- Custom CSS -->
-  <link href="assets/css/style.css" rel="stylesheet">
-  <link href="assets/css/hover.css" rel="stylesheet">
+  <link rel="preload" href="assets/css/style.css" rel="stylesheet">
+  <link rel="preload" href="assets/css/hover.css" rel="stylesheet">
 </head>
 
 <body>
@@ -831,10 +831,10 @@
 
 
   <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  <script rel='preload' src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
   <!-- Custom Js -->
-  <script src="assets/js/custom.js"></script>
+  <script rel="preload" src="assets/js/custom.js"></script>
 
 </body>
 <!-- /body -->
