Guess you can't rel='preload' scripts. Sick.

--- a/index.html
+++ b/index.html
@@ -831,10 +831,10 @@
 
 
   <!-- jQuery -->
-  <script rel='preload' src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
   <!-- Custom Js -->
-  <script rel="preload" src="assets/js/custom.js"></script>
+  <script src="assets/js/custom.js"></script>
 
 </body>
 <!-- /body -->
