Preloading scripts fixed

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 
   <title>Alex P | Web Developer</title>
 
+  <link rel="preload" href="assets/js/custom.js" as="script">
+  <link rel="preload" href="assets/css/style.css" as="stylesheet">
+  <link rel="preload" href="assets/css/hover.css" as="stylesheet">
+
   <!-- Custom CSS -->
-  <link rel="preload" href="assets/css/style.css" rel="stylesheet">
-  <link rel="preload" href="assets/css/hover.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/hover.css">
 </head>
 
 <body>
