--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="preload" href="assets/js/custom.js" as="script">
   <link rel="preload" href="assets/css/style.css" as="stylesheet">
   <link rel="preload" href="assets/css/hover.css" as="stylesheet">
+  <link rel="preload" href="assets/img/ajp2.jpg" as="image">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
