--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h1>Certified Full-Stack Developer</h1>
           <div class="col-6">
             <p>Between growing up in Germany to hanging out in Montreal, studying in Kansas - then Beirut-, advocacy and designing
-              in D.C. & now finally banking and finance in AZ I've tried my hand at a little bit of everything. I've managed
+              in D.C. to banking and finance & now FINALLY developing in AZ I've tried my hand at a little bit of everything. I've managed
               to take part in the variety of human experiences & want to put that to work for you.</p>
             <p>I taught myself programming playing around with internet based virtual worlds and picked up markup by taking
               apart websites to see how they work. I haven't stopped learning since and just completed the University of
