Amended PortHub img in #portfolio

--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
           <div class="effect">
             <a href="https://realporthub.herokuapp.com/" target="_blank">
               <br>
-              <img class="img-responsive" src="https://camo.githubusercontent.com/8f12aa75a329d4b8df4ded8a752981f73573f2a7/68747470733a2f2f63646e2e7261776769742e636f6d2f4974734f6b61794974734f6666696369616c2f70726f6a656374332f6465762f6173736574732f696d616765732f706f72746875622d6c6f676f2e7376673f73616e6974697a653d74727565"
+              <img class="img-responsive" src="https://camo.githubusercontent.com/fdda6c30618ba1660b3cb29630e0ef95d30f0144/68747470733a2f2f63646e2e7261776769742e636f6d2f4974734f6b61794974734f6666696369616c2f70726f6a656374332f6d61737465722f6173736574732f696d616765732f706f72746875622d6c6f676f2e7376673f73616e6974697a653d74727565"
                 alt="">
             </a>
             <figcaption>
@@ -734,7 +734,7 @@
       <!-- /.row -->
 
       <div class="row half">
-        <!-- PortHub Moble -->
+        <!-- PortHub Mobile -->
         <div class="col-4">
           <div class="effect">
             <a href="https://expo.io/@itsokayitsofficial/porthub-app" target="_blank">
