Updated UI scaling

--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
 
   <!-- Landing -->
   <section id="landing">
-
+    <!-- <img src="https://i.imgur.com/TgBCHwq.gif"> -->
   </section>
   <!-- /landing -->
-
 
   <!-- About -->
   <section id="about">
