Added IRELO and Imgur to #portfolio

--- a/index.html
+++ b/index.html
@@ -783,6 +783,42 @@
       </div>
       <!-- /.row -->
 
+      <div class="row half">
+        <!-- IRELO -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="https://itsokayitsofficial.github.io/JS-Plugin/" target="_blank">
+              <br>
+              <img class="img-responsive" src="https://d1qb2nb5cznatu.cloudfront.net/startups/i/5093574-dd3dd1d50338c4a3eeb10eb923255d22-medium_jpg.jpg"
+                alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>IRELO Widget (VanillaJS)</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
+
+        <!-- Imgur -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="https://imgur.com/a/vbD4Q" target="_blank">
+              <br>
+              <img class="img-responsive" src="https://i.imgur.com/RZfgbVH.jpg"
+                alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>Imgur Gifs (self made)</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
+
+      </div>
+      <!-- /.row -->
+
     </div>
     <!-- /.container -->
   </section>
