Updated #About section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="descption" content="ItsOkayItsOfficial! The Official portfolio of Alex P, full-stack web developer and know human.">
+  <meta name="descption" content="ItsOkayItsOfficial! The Official portfolio of Alex P, full-stack web & robotics developer and known human.">
   <meta name="author" content="Alex P">
   <link rel="shortcut icon" href="assets/img/logo.png">
 
@@ -63,21 +63,22 @@
         </div>
         <!-- /.col-4 -->
         <div class="col-8">
-          <h1>Certified Full-Stack Developer</h1>
+          <span class="aboutHeader">
+            <h1>Certified Robotics & Full-Stack Developer</h1>
+            <img id="BPCert" src="https://image-store.slidesharecdn.com/56cf937b-1dec-4ffb-b00d-3e452700dd72-original.jpeg">
+          </span>
           <div class="col-6">
             <p>Between growing up in Germany to hanging out in Montreal, studying in Kansas - then Beirut-, advocacy and designing
               in D.C. to banking and finance & now FINALLY developing in AZ I've tried my hand at a little bit of everything. I've managed
               to take part in the variety of human experiences & want to put that to work for you.</p>
             <p>I taught myself programming playing around with internet based virtual worlds and picked up markup by taking
-              apart websites to see how they work. I haven't stopped learning since and just completed the University of
+              apart websites to see how they work. I haven't stopped learning since and recently completed the University of
               Arizona's Full-stack Developer program.</p>
           </div>
           <!-- /.col-6 -->
           <div class="col-6">
-            <p>From HTML to JavaScript to MongoDB, designing and building for the web has become an all consuming passion. I'm
-              particularly good at building on the front with HTML, CSS, and React, connecting with Node, and manipulating
-              RESTful API with MongoDB.</p>
-            <p>Need a web presence? I got you covered. Need solid back-to-front management and flow? I'm on it! </p>
+            <p>Most recently I've started working in robotics and systems automation, helping BNP Paribas subsidiary Bank of the West with Robotics Process Automation (RPA). This entails "turning the computer in-on-itself" to perform tasks currently done by a human user and achieved using mainly Visual Basic, C#, JavaScript, SQL database manipulation.</p>
+            <p>To grow my robotics aptitude I'm currently taking courses in Machine and Deep Learning, and seeking to master TensorFlow.</p>
             <br>
             <hr>
           </div>
@@ -665,7 +666,7 @@
         <!-- VS Coder -->
         <div class="col-4">
           <div class="effect">
-            <a href="http://itsokayitsofficial.io/port/code/coder.html" target="_blank">
+            <a href="https://www.itsokayitsofficial.io/port/code/coder.html" target="_blank">
               <br>
               <img class="img-responsive" src="https://ih0.redbubble.net/image.269447667.3367/flat,800x800,075,f.jpg" alt="">
             </a>
